@@ -1,3 +1,7 @@
+2020-02-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test31-interrupt-process): Remove :unstable tag.
+
 2020-02-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-get-remote-gid): Declare.
